# plugins

./: .gitignore  README.md  example.yml  plugins.yml  pyproject.toml
.github/.workflows/: create-artifacts-on-merge.yml  create-release-on-merge.yml
.github/workflows/: create-release-on-merge.yml  pr-merge-pipeline.yml  update-plugin-data.yml
plugins/: advanced-alchemy.yml  litestar-asyncpg.yml  litestar-granian.yml  litestar-htmx.yml  litestar-mcp.yml  litestar-oracledb.yml  litestar-saq.yml  litestar-vite.yml  sqlspec.yml
src/: categories.py  constants.py  main.py  types.py  utils.py
tests/: test_requires_python.py
